--- a/PlaylistGenerator/app/src/main/res/values/strings.xml
+++ b/PlaylistGenerator/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="Popularity">Popularity</string>
     <string name="Similarity">Similarity</string>
     <string name="Blacklist">Blacklist</string>
-    <string name="instructions_for_blacklist">Enter artist or song names.</string>
+    <string name="instructions_for_blacklist">Enter artist names separated by commas.</string>
     <string name="fifty">50</string>
     <string name="number">%1$d</string>
 </resources>
